Require the user to move back the cursor before triggereing again

an artificial mouse cursor warp after triggereing an effect besides
looking glitchy
doesn't solve the case in which the user keeps pushing the mouse after
the effect is triggered, causing a continuous trigger and un-trigger

this requires the user moves back the cursor a bit by themselves before
being able to retrigger again. it's a small behavioral change but
arguably a better ux

BUG:455350